Adjust the alignment of img on index.html and carousels on gallery.html to be central, and fix responsive sizing of both

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,10 @@ section {
 }
 
 #enka {
-    float: right;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 391px;
 }
 
 .carousellook {
